--- a/config.env
+++ b/config.env
@@ -2,7 +2,7 @@ NODE_ENV=development
 PORT=3000
 DATABASE=mongodb+srv://Chuling:<PASSWORD>@cluster0.i4ctq.mongodb.net/Natours?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://localhost:27017/natours
-DATABASE_PASSWORD=6i5mkBg762jbZU3
+DATABASE_PASSWORD=
 
 JWt_SECRET=my-first-jsonwebtoken-secret-is-made-on-14-09-2020
 JWT_EXPIRES_IN=90d
