--- a/config.env
+++ b/config.env
@@ -8,7 +8,7 @@ JWt_SECRET=my-first-jsonwebtoken-secret-is-made-on-14-09-2020
 JWT_EXPIRES_IN=90d
 JWT_COOKIE_EXPIRES_IN=90
 
-EMAIL_USERNAME=1b7da4c328598f
-EMAIL_PASSWORD=5194e8b87e5388
+EMAIL_USERNAME=
+EMAIL_PASSWORD=
 EMAIL_HOST=smtp.mailtrap.io
 EMAIL_PORT=25
